@startuml

title Diagramme de classe du package modele

package modele {

    class Player {
        - int currentBoatIndex
        - List<Bateau> boatList
        - List<Point2D> tirsEchoues
        - Strategie[] strategies
        - int currentStrategie
        + void placeBoatAlea()
        + Point2D shootIA()
        + boolean receiveShoot(Point2D pos,int damage)
        + boolean chooseBoat(Point2D pos)
        + int getBoatIndexFromPos(Point2D pos)
        + Bateau getCurrentBoat()
        + Point2D addFailedShoot(pos)
        + nextStrategie()
    }
    Player --"*" boatFactory.Bateau
    Player -- "*" Point2D : "Tirs échoués"
    Player -- "0..1" Strategie
    Player ..> Serializable

    class BatailleNavale {
        - int width
        - int height
        - boolean turnPlayer
        - int epoque
        - Player humain
        - Player ia

        - List<Bateau> initListBateau()
        + playerShoot(Point2D pos)
        + boolean checkBoatsPosition()

    }

    Interface Serializable
    
    Interface Strategie {
        + generateShoot() : Point2D
    }
    
    class StrategieAlea{
        - Point2D lastShootTouched
        + Point2D generateShoot()
    }
    
    class StrategieCroix{
        - Point2D lastShootHasTouched
        + Point2D generateShoot()
    }

    class Point2D{
        - int x
        - int y
    }
    
    
    strategieAlea ..> Strategie
    strategieCroix ..> Strategie
    BatailleNavale --"1" Player : "Humain"
    BatailleNavale --"1" Player : "IA"
    BatailleNavale ..> Serializable
    Point2D ..> Serializable
}


@enduml